Added TextField, icon button, etc

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-	"name": "ssui",
+	"name": "ssui-svelte",
 	"version": "0.0.1",
+	"author": "Maxwell Lehmann",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build && npm run package",
